# coriolis-pdk-nsx2

./: build-LIP6.sh  meson.build  pyproject.toml
libs.tech/coriolis/: __init__.py  nsxlib2.py  techno.py  techno_symb.py
libs.tech/gf180mcu/: .gf180.rds.swp
nsx2/: __init__.py
nsx2/coriolis/core2chip/: niolib.py
nsx2/coriolis/nsxlib2_techno/: nsxlib2.lib  nsxlib2.py  techno.py
nsx2/target_technologies/gf180mcu/spice/: spimodel.cfg
nsx2/target_technologies/sg13g2/spice/sg13g2_models/: psp103_nqs.osdi
nsx2/target_technologies/sky130/spice/sky130_models/: sky130_fd_pr__nfet_01v8__tt.corner.spice  sky130_fd_pr__pfet_01v8__tt.corner.spice
packaging/: coriolis-pdk-nsx2.dsc  coriolis-pdk-nsx2.spec  debian.changelog  debian.control  debian.copyright  debian.rules  uploadOBS.sh
