
[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[project]
name = "coriolis-pdk-nsx2"
version = "2025.12.31"
authors = [ { name="Ali Oudrhiri"  , email="ali.oudrhiri@lip6.fr"}
          , { name="Naohiko shimizu"  , email="naohiko.shimizu@lip6.fr" }
          , { name="Jean-Paul Chaput", email="Jean-Paul.Chaput@lip6.fr"}
          ]
description = "PDK for nsx2 library"
readme = "README.rst"
license = { text="GPL-2.0-or-later" }
keywords = [ "vlsi", "pdk" ]
classifiers = [ "Development Status :: 3 - Alpha" 
              , "Programming Language :: Python :: 3.8"
              ]

[project.urls]
Homepage = "https://coriolis.lip6.fr/"
